# tree-sitter-pascal

./: Cargo.toml  README.md  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
src/: grammar.json  node-types.json
