[package]
name = "tree-sitter-pascal"
description = "Pascal grammar for the tree-sitter parsing library"
version = "0.10.0"
keywords = ["incremental", "parsing", "pascal", "delphi"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Isopod/tree-sitter-pascal"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
